BUG FIXES
(raf) Core: USB is now working again, thanks to AhMan's for the help.
(raf) Core: Added AUTOSTART option under USB, instead of it being its own option, and using up screenspace.
(raf) Core: Better Suspend/Resume support.
(raf) Core: Added Tell/Seek functions to the streams/decoding. Added support to resume to continue playing where it was before it went into suspend mode (localfiles).
KNOWN BUGS
(raf) Core: Static IP connections don't work correctly. Seems the gateway is not used as it should.
(raf) Core: Module unloading doesn't free up all memory correctly. Even though plugins can now be loaded/unloaded, the PSP can eventually crash as it runs out of memory (after loading/unloading enough times; even though I switched back and forth between the text and 3d UIs over 20 times, and everything worked fine).

1.1.1271 (2007-02-12)
NEW FEATURES
(raf) Core+UI Plugins: Added Skin selection support to PSPRadio (finally). This can be accessed via the Options menu (skin option). -Optimized.
(raf) Plugins: Added a version check system. From now on, plugins will only work if designed for the same interface version of PSPRadio (in this case 1.1).
BUG FIXES
(raf) Plugins: Plugin unloading work-around implemented. Root cause still under investigation. This means plugins can now be loaded/unloaded, switching between user interfaces works, etc.
(raf) Core: Added skins made by Albatross. Thanks, Alba!
KNOWN BUGS
(raf) Core: USB is not working, menu option removed for now (With AhMan's help this will hopefully be working again on the next version)
(raf) Core: Static IP connections don't work correctly. Seems the gateway is not used as it should.
(raf) Core: Module unloading doesn't free up all memory correctly. Even though plugins can now be loaded/unloaded, the PSP can eventually crash as it runs out of memory (after loading/unloading enough times; even though I switched back and forth between the text and 3d UIs over 20 times, and everything worked fine).
