@@ -14,17 +14,26 @@
 ;CIRCLE  = 8192
 ;CROSS   = 16384
 ;SQUARE  = 32768
-;HOLD    = 131072
-;MUSIC NOTE= 8388608
-;SCREEN BTN= 4194304
 [BUTTONS]
 TAKE_SCREENSHOT = 1;
 OK = 16384;
 CANCEL = 8192;
+FWD = 64; (DOWN)
+BACK = 16; (UP)
 STOP = 32768;
 OPTIONS = 8;
 OPTIONS_EXIT = 8;
-CYCLE_SCREENS = 4096;
+CYCLE_SCREENS = 512;
+CYCLE_SCREENS_BACK = 256;
+PGDN = 576; (This is RTRIGGER + DOWN)
+PGUP = 528; (This is RTRIGGER + UP)
+;for options screen
+OPT_NAMES_FWD = 64;
+OPT_NAMES_BACK = 16;
+OPT_OPTIONS_FWD = 32;
+OPT_OPTIONS_BACK = 128;
+OPT_ACTIVATE = 16384;
+
 
 
 
