@@ -266,15 +266,14 @@ void CScreenHandler::CommonInputHandler(int iButtonMask, u32 iEventType) /** Eve
 	/** Only do UP and DOWN repeats */
 	if (MID_ONBUTTON_REPEAT == iEventType)
 	{
-		if (((iButtonMask & PSP_CTRL_UP) || (iButtonMask & PSP_CTRL_DOWN)) == false)
+		if(IS_BUTTON_PRESSED(iButtonMask, PSPRadioButtonMap.FWD) || IS_BUTTON_PRESSED(iButtonMask, PSPRadioButtonMap.BACK))
 		{
 			return;
 		}
 	}
 	else if (MID_ONBUTTON_LONG_PRESS == iEventType)
 	{
-		//if (iButtonMask & PSP_CTRL_SELECT)
-		if (iButtonMask & m_Config->GetInteger("BUTTONS:TAKE_SCREENSHOT", PSP_CTRL_SELECT))
+		if (IS_BUTTON_PRESSED(iButtonMask, PSPRadioButtonMap.TAKE_SCREENSHOT))
 		{
 			GetSound()->Stop(); /** Stop stream if playing, else the event queue can back-up */
 
@@ -299,19 +298,14 @@ void CScreenHandler::CommonInputHandler(int iButtonMask, u32 iEventType) /** Eve
 		case CScreenHandler::PSPRADIO_SCREEN_LOCALFILES:
 		case CScreenHandler::PSPRADIO_SCREEN_PLAYLIST:
 		case CScreenHandler::PSPRADIO_SCREEN_SHOUTCAST_BROWSER:
-			if (iButtonMask & PSP_CTRL_HOME)
-			{
-				//pPSPApp->SendEvent(EID_EXIT_SELECTED, NULL, SID_SCREENHANDLER);
-				Log(LOG_VERYLOW, "HOME BUTTON RECEIVED");
-			}
-			else if (iButtonMask & m_Config->GetInteger("BUTTONS:OPTIONS", PSP_CTRL_START))		/** Go to Options screen */
+			if (IS_BUTTON_PRESSED(iButtonMask, PSPRadioButtonMap.OPTIONS))		/** Go to Options screen */
 			{
 				// Enter option menu and store the current screen
 				m_PreviousScreen = m_CurrentScreen;
 				m_CurrentScreen  = Screens[PSPRADIO_SCREEN_OPTIONS];
 				m_CurrentScreen->Activate(m_UI);
 			}
-			else if (iButtonMask & m_Config->GetInteger("BUTTONS:CYCLE_SCREENS", PSP_CTRL_TRIANGLE)) /** Cycle through screens (except options) */
+			else if (IS_BUTTON_PRESSED(iButtonMask, PSPRadioButtonMap.CYCLE_SCREENS)) /** Cycle through screens (except options) */
 			{
 				m_CurrentScreen = Screens[m_CurrentScreen->GetId()+1];
 				/** Don't go to options screen with triangle;
@@ -323,6 +317,20 @@ void CScreenHandler::CommonInputHandler(int iButtonMask, u32 iEventType) /** Eve
 				}
 				m_CurrentScreen->Activate(m_UI);
 			}
+			else if (IS_BUTTON_PRESSED(iButtonMask, PSPRadioButtonMap.CYCLE_SCREENS_BACK)) /** Cycle through screens (except options) */
+			{
+				int newscreenindex = m_CurrentScreen->GetId() - 1;
+				if (newscreenindex < PSPRADIO_SCREEN_LIST_BEGIN)
+				{
+					/** Don't go to options screen with triangle;
+						Also, as options screen is the last one in the list
+						we cycle back to the first one */
+					newscreenindex = PSPRADIO_SCREEN_OPTIONS -1;
+				}
+					
+				m_CurrentScreen = Screens[newscreenindex];
+				m_CurrentScreen->Activate(m_UI);
+			}
 			else
 			{
 				m_CurrentScreen->InputHandler(iButtonMask);
@@ -332,7 +340,7 @@ void CScreenHandler::CommonInputHandler(int iButtonMask, u32 iEventType) /** Eve
 #ifdef DYNAMIC_BUILD
 		case CScreenHandler::PSPRADIO_SCREEN_OPTIONS_PLUGIN_MENU:
 #endif
-			if (iButtonMask & m_Config->GetInteger("BUTTONS:OPTIONS_EXIT", PSP_CTRL_START))	/** Get out of Options screen */
+			if (IS_BUTTON_PRESSED(iButtonMask, PSPRadioButtonMap.OPTIONS_EXIT))	/** Get out of Options screen */
 			{
 				// Go back to where we were before entering the options menu
 				m_CurrentScreen = m_PreviousScreen;
